--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="app">
+    <app-toolbar></app-toolbar>
+    <div>
+        <router-outlet></router-outlet>
+    </div>
+</div>
