--- a/front/src/app/features/auth/components/login/login.component.html
+++ b/front/src/app/features/auth/components/login/login.component.html
@@ -1,14 +1,21 @@
-<div class="login" fxLayout="row" fxLayoutAlign="center center">
+<div class="login">
     <mat-card>
-        <mat-card-header fxLayoutAlign="center center">
-            <mat-card-title>Login</mat-card-title>
+        <mat-card-header>
+            <mat-card-title>
+                <div>
+                    <button mat-icon-button (click)="back()">
+                        <mat-icon>west</mat-icon>
+                    </button>
+                    <h1>Se connecter</h1>
+                </div>
+            </mat-card-title>
         </mat-card-header>
         <form class="login-form" [formGroup]="form" (ngSubmit)="submit()">
-            <mat-card-content fxLayout="column">
-                <mat-form-field fxFlex>
+            <mat-card-content>
+                <mat-form-field>
                     <input matInput placeholder="Email" formControlName="email">
                 </mat-form-field>
-                <mat-form-field fxFlex>
+                <mat-form-field>
                     <input matInput [type]="hide ? 'password' : 'text'" placeholder="Password"
                         formControlName="password">
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
@@ -17,7 +24,7 @@
                     </button>
                 </mat-form-field>
             </mat-card-content>
-            <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Submit</button>
+            <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Se connecter</button>
             <p *ngIf="onError" class="error">An error occurred</p>
         </form>
     </mat-card>
