--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,8 +1,8 @@
-
 <div class="app">
-    <app-toolbar></app-toolbar>
-    <div>
-        <router-outlet></router-outlet>
-    </div>
+    <app-layout>
+        <div>
+            <router-outlet></router-outlet>
+        </div>
+    </app-layout>
 </div>
 
