--- a/front/src/app/features/auth/components/login/login.component.scss
+++ b/front/src/app/features/auth/components/login/login.component.scss
@@ -1,35 +1,99 @@
 .section-title{
     width: 100%;
-    margin-top: 2%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    position: relative;
+    margin-top: 5%;
+
+    .logo-container{
+        display: none;
+    }
+
+    .logo{
+        width: 200px;
+        height: 115px;
+    }
 
     .back-button{
-        display: flex;
-        margin-bottom: 50px;
-        margin-left: 2%;
-        position: relative;
-        align-items: center;
-        justify-content: center;
+        position: absolute;
+        top: -0.5rem;
+        left: 3rem;
+        transform: translate(-50%, -50%);
+        cursor: pointer;
 
-        .back-icon{
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+        &-icon{
             font-size: 2rem;
-            cursor: pointer;
+        }
+    }
+
+    .title{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    @media screen and (max-width: 768px){
+        .logo-container{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .back-button{
+            position: static;
+            margin-left: 15%;
+            margin-top: 10%;
         }
     }
 }
 
 .login-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     .field-group{
+        margin: 0.5rem 0;
         display: flex;
         justify-content: center;
         flex-direction: column;
         align-items: start;
-        margin-left: 50%;
+
+        &-input{
+            width: 100%;
+            margin: 0;
+        }
+    }
+
+    .submit-button {
+        margin: 0.5rem 0;
+        background-color: rgb(103, 58, 183);
+        border-radius: 5px;
+        color: rgb(255, 255, 255);
+        cursor: pointer;
+    
+        &:disabled {
+            background-color: rgba(103, 58, 183, 0.8); 
+            color: rgba(255, 255, 255, 0.8); 
+            cursor: not-allowed;
+        }
     }
 }
+
+.error{
+    color: red;
+    font-size: 0.8rem;
+    margin-top: 0.5rem;
+}
+
+.field-group-input {
+    &.invalid .mat-form-field-outline {
+        border-color: red;
+    }
+}
+
+.mat-error {
+    font-size: 0.75rem;
+    color: red;
+}
+
