--- a/front/src/app/features/auth/components/register/register.component.html
+++ b/front/src/app/features/auth/components/register/register.component.html
@@ -1,22 +1,44 @@
-<div class="register" fxLayout="row" fxLayoutAlign="center center">
-    <mat-card>
-        <mat-card-header fxLayoutAlign="center center">
-            <mat-card-title>Register</mat-card-title>
-        </mat-card-header>
-        <form class="register-form" [formGroup]="form" (ngSubmit)="submit()">
-            <mat-card-content fxLayout="column">
-                <mat-form-field fxFlex>
-                    <input matInput placeholder="First name" formControlName="username">
-                </mat-form-field>
-                <mat-form-field fxFlex>
-                    <input matInput placeholder="Email" formControlName="email">
-                </mat-form-field>
-                <mat-form-field fxFlex>
-                    <input matInput placeholder="Password" formControlName="password">
-                </mat-form-field>
-            </mat-card-content>
-            <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Submit</button>
-            <span *ngIf="onError" class="error ml2">An error occurred</span>
-        </form>
-    </mat-card>
+<div class="login">
+    <div class="section-title">
+        <button class="back-button" mat-icon-button (click)="back()">
+            <mat-icon class="back-button-icon">keyboard_backspace</mat-icon>
+        </button>
+        <div class="logo-container">
+            <img src="/assets/logo_p6.png" alt="logo" class="logo"/>
+        </div>
+        <div class="">
+            <h1 class="title">Se connecter</h1>
+        </div>
+    </div>
+    <form class="login-form" [formGroup]="form" (ngSubmit)="submit()">
+        <div class="field-group">
+            <label class="field-group-label" for="username">Nom d'utilisateur</label>
+            <mat-form-field class="field-group-input" appearance="outline">
+                <input matInput id="username" type="text" formControlName="username">
+            </mat-form-field>
+            <mat-error *ngIf="form.get('username')?.invalid && form.get('username')?.touched">
+               Nom d'utilisateur invalide
+            </mat-error>
+        </div>
+        <div class="field-group">
+            <label class="field-group-label" for="email">Adresse e-mail</label>
+            <mat-form-field class="field-group-input" appearance="outline">
+                <input matInput id="email" type="email" formControlName="email">
+            </mat-form-field>
+            <mat-error *ngIf="form.get('email')?.invalid && form.get('email')?.touched">
+                E-mail invalide
+            </mat-error>
+        </div>
+        <div class="field-group">
+            <label class="field-group-label" for="password">Mot de passe</label>
+            <mat-form-field class="field-group-input"  appearance="outline">
+                <input matInput id="password" type="password" formControlName="password">
+            </mat-form-field>
+            <mat-error *ngIf="form.get('password')?.invalid && form.get('password')?.touched">
+                Mot de passe invalide
+            </mat-error>
+        </div>
+        <button class="submit-button" mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Se connecter</button>
+        <p *ngIf="onError" class="error">Une erreur s'est produite</p>
+    </form>
 </div>
