Modify ArticleDto get author username and not the id

--- a/front/src/app/features/articles/components/articles-list/articles-list.component.html
+++ b/front/src/app/features/articles/components/articles-list/articles-list.component.html
@@ -20,8 +20,7 @@
                 <mat-card-title class="title">{{article.title | truncate:40}}</mat-card-title>
                 <div class="subtitle-group">
                     <mat-card-subtitle class="date">{{article.updatedAt}}</mat-card-subtitle>
-                    <mat-card-subtitle class="author">{{article.user_id }}TestTest</mat-card-subtitle>
-                    <span></span>
+                    <mat-card-subtitle class="author">{{ article.author }}</mat-card-subtitle>
                 </div>
               </mat-card-title-group>
             </mat-card-header>
