--- a/front/src/app/components/not-found/not-found.component.html
+++ b/front/src/app/components/not-found/not-found.component.html
@@ -1,3 +1,5 @@
-<div class="flex justify-center mt3">
-    <h1>Page not found !</h1>
+<div class="center">
+    <h2>No corresponding page found</h2>
+    <a routerLink="">Go back</a>
 </div>
+  
