--- a/front/src/app/components/not-found/not-found.component.scss
+++ b/front/src/app/components/not-found/not-found.component.scss
@@ -1,3 +1,8 @@
-.not-found {
-    width: 500px;
+.center {
+    margin-top: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
+  
