Drawer link active in purple done

--- a/front/src/app/components/layout/layout.component.html
+++ b/front/src/app/components/layout/layout.component.html
@@ -6,8 +6,8 @@
     position="end">
       <mat-nav-list class="sidenav-content">
             <div class="sidenav-links">
-              <a routerLink="articles" class="link">Articles</a>
-              <a routerLink="topics" class="link">Thèmes</a>
+              <a routerLink="articles" class="link" routerLinkActive="active">Articles</a>
+              <a routerLink="topics" class="link" routerLinkActive="active">Thèmes</a>
             </div>
             <button routerLink="me" class="link account-button">
                 <mat-icon class="account-icon" aria-hidden="false" aria-label="account icon">person_outline</mat-icon>
