--- a/front/src/app/components/layout/layout.component.html
+++ b/front/src/app/components/layout/layout.component.html
@@ -1,6 +1,6 @@
 <mat-drawer-container class="sidenav-container custom-backdrop"  [hasBackdrop]="true">
     <mat-drawer 
-    *ngIf="$isLogged() | async"
+    *ngIf="($isLogged() | async) && drawerCanBeVisible"
     #drawer mode="over" 
     class="sidenav" 
     position="end">
