--- a/front/src/app/features/auth/components/login/login.component.html
+++ b/front/src/app/features/auth/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login">
     <div class="section-title">
-        <button class="back-button" mat-icon-button (click)="back()">
+        <button class="back-button" mat-icon-button routerLink="/">
             <mat-icon class="back-button-icon">keyboard_backspace</mat-icon>
         </button>
         <div class="logo-container">
