--- a/front/src/app/features/auth/components/register/register.component.html
+++ b/front/src/app/features/auth/components/register/register.component.html
@@ -1,16 +1,16 @@
-<div class="login">
+<div class="register">
     <div class="section-title">
-        <button class="back-button" mat-icon-button (click)="back()">
+        <button class="back-button" mat-icon-button routerLink="/">
             <mat-icon class="back-button-icon">keyboard_backspace</mat-icon>
         </button>
         <div class="logo-container">
             <img src="/assets/logo_p6.png" alt="logo" class="logo"/>
         </div>
         <div class="">
-            <h1 class="title">Se connecter</h1>
+            <h1 class="title">Inscription</h1>
         </div>
     </div>
-    <form class="login-form" [formGroup]="form" (ngSubmit)="submit()">
+    <form class="register-form" [formGroup]="form" (ngSubmit)="submit()">
         <div class="field-group">
             <label class="field-group-label" for="username">Nom d'utilisateur</label>
             <mat-form-field class="field-group-input" appearance="outline">
@@ -38,7 +38,7 @@
                 Mot de passe invalide
             </mat-error>
         </div>
-        <button class="submit-button" mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Se connecter</button>
+        <button class="submit-button" mat-raised-button color="primary" type="submit" [disabled]="form.invalid">S'inscrire</button>
         <p *ngIf="onError" class="error">Une erreur s'est produite</p>
     </form>
 </div>
