Send comment in detail article page is done

--- a/front/src/app/components/layout/layout.component.scss
+++ b/front/src/app/components/layout/layout.component.scss
@@ -24,6 +24,10 @@ mat-drawer-content{
         height: 75px;
     }
 
+    .logo{
+        cursor: pointer;
+    }
+
     .toolbar-container {
         background-color: #fff;
         border-bottom: 1px solid #000;
