--- a/front/src/app/features/articles/components/articles-detail/articles-detail.component.scss
+++ b/front/src/app/features/articles/components/articles-detail/articles-detail.component.scss
@@ -116,6 +116,7 @@
             border-radius: 15px;
             display: flex;
             align-items: center; 
+            overflow: hidden;
 
             @media screen and (max-width: 860px) {
                 background-color: transparent;
@@ -146,7 +147,6 @@
 
             
             ::ng-deep .mat-form-field-outline-start{
-                width: 30%;
                 border: none;
             }
         }
@@ -158,6 +158,10 @@
         &-input{
             width: 100%;
             height: 150px;
+
+            @media screen and (max-width: 380px) {
+                height: 250px;
+            }
         }
 
         &-submit{
